# corrective-unlearning-for-gnns

./: .gitignore  README.md  hp_tune.py  main.py  pyproject.toml  run_cognac_best.py
framework/: training_args.py  utils.py
trainers/: acdc.py  cognac.py  cognac_only_descent.py
