[project]
name = "corrective-unlearning-for-gnns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "ogb>=1.3.6",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchmetrics>=1.8.0",
    "wandb>=0.21.0",
]
